Install boottrap on rails

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
 <h1>Welcome home page Ruby On Rails</h1>
 
-<%= link_to "Link to About", about_path %>
+<%= link_to "My Blog, article_path %>
+| <%= link_to "Link to About", about_path %>
