Deploy now to heroku

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,21 +1,36 @@
-<h1>List my Article </h1>
-<p>
-  <table>
-    <%= link_to "Create new Article", new_article_path %>
-    <tr>
-      <th>title</th>
-      <th>Description:</th>
-      <th>Action:</th>
 
-    </tr>
-    <%  @article.each do |article| %>
-    <tr>
-      <td><%= article.title %></td>
-      <td><%= article.description %></td>
-      <td><%= link_to "Edit", edit_article_path(article)  %></td>
-      <td><%= link_to "Show", article_path(article)  %></td>
-      <td><%= link_to 'Delete', article_path(article), method: :delete, data: {confirm: "Are you sure?"} %></td>
-    </tr>
-    <% end %>
-  </table>
-</p>
+
+
+
+
+  <div class="container">
+    <h1>List my Article </h1>
+
+    <div class="row col-md-6 col-md-offset-2 custyle">
+    <table class="table table-striped custab">
+    <thead>
+      <%= link_to "Create new Article", new_article_path, class:"btn btn-primary btn-xs pull-right" %>
+        <tr>
+            <th>ID</th>
+            <th>Title</th>
+            <th>description</th>
+            <th class="text-center">Action</th>
+        </tr>
+    </thead>
+    <% @article.each do |article| %>
+            <tr>
+                <td><%= article.id %></td>
+                <td><%= article.title %></td>
+                <td><%= article.description %></td>
+                <td class="text-center">
+                  <%= link_to "View", article_path(article), class:"btn btn-info btn-xs" %></td>
+                <td class="text-center">
+                  <%= link_to "Delete", article_path(article), method: :delete,
+                  data:{confirm:"Deseja deletar esse artigo?"}, class:"btn btn-danger btn-xs" %></td>
+
+            </tr>
+   <% end %>
+
+    </table>
+    </div>
+</div>
