--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,5 +1,8 @@
-<%= simple_form_for @article do |f| %>
-<p><%= f.input :title,  required: true %></p>
-<p><%= f.input :description %></p>
-<p><%= f.button :submit %></p>
-<% end %>
+<div class="container">
+  <%= simple_form_for @article do |f| %>
+  <p><%= f.input :title,  required: true %></p>
+  <p><%= f.input :description %></p>
+  <p><%= f.button :submit %></p>
+  <% end %>
+
+</div>
