--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,14 +1,16 @@
-<% if @article.errors.any? %>
+<div class="container">
+  <% if @article.errors.any? %>
 
-   <h2><%= pluralize(@article.errors.count, "error") %> prohibited this article from being saved:</h2>
+     <h2><%= pluralize(@article.errors.count, "error") %> prohibited this article from being saved:</h2>
 
-   <ul>
-   <% @article.errors.full_messages.each do |message| %>
-     <li><%= message %></li>
-   <% end %>
-   </ul>
+     <ul>
+     <% @article.errors.full_messages.each do |message| %>
+       <li><%= message %></li>
+     <% end %>
+     </ul>
 
-<% end %>
-<h1>New Article</h1>
+  <% end %>
+  <h1>New Article</h1>
+</div>
 
 <%= render "form"  %>
