--- a/app/views/layouts/_messagers.html.erb
+++ b/app/views/layouts/_messagers.html.erb
@@ -1,9 +1,12 @@
 
   <p><% flash.each do |name,msg| %></p>
-  <div class="alert alert-success">
-  <ul>
-    <li><%= msg %></li>
-  </ul>
-</div>
+  <div class="container">
+    <div class="alert alert-success">
+    <ul>
+      <li><%= msg %></li>
+      <li><%= name %></li>
+    </ul>
+  </div>
 
+  </div>
   <% end %>
