--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -22,9 +22,36 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <% if controller_name != 'sessions' %>
+
             <li><%= link_to "Sign Up", new_user_session_path, class: "smothscroll" %></li>
-            <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "smothscroll" %></li>
+
+
+
+  <%=  image_tag(gravatar_for("marviorocha@marviorocha.com","45"), class:"img-rounded")  %>
+
+
             <% end %>
+
+            <ul class="nav navbar-nav pull-right">
+
+                <li class="dropdown">
+
+                    <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+
+                        User Name <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li>
+
+                            <%= link_to "Settings", edit_user_registration_path(@user) %>
+                        </li>
+                        <li role="separator" class="divider"></li>
+                        <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "smothscroll" %></li>
+
+                    </ul>
+                </li>
+            </ul>
+
 
           </ul>
         </div><!--/.nav-collapse -->
