Add user login current user

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -37,7 +37,7 @@
 	</div>
 	<div id="c">
 		<div class="container">
-			<p>Created by <a href="http://www.blacktie.co">BLACKTIE.CO</a></p>
+			<p>Created by <a href="http://www.marviorocha.com">MarvioRocha.Com</a></p>
 
 		</div>
 	</div>
