--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,59 +1,60 @@
 
-  <!-- Fixed navbar -->
-    <div id="navigation" class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-            <%= link_to "Marvo Rocha", root_path, class: "navbar-brand", id: "logo"   %>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"> <%= link_to "Home", root_path, class: "smothscroll"   %></li>
-            <li><%= link_to "About", about_path, class: "smothscroll"   %></li>
-            <li><%= link_to "Blog", blog_path, class: "smothscroll"   %></li>
-            <li><%= link_to "Articles", articles_path %></li>
-            <li><a href="#showcase" class="smothScroll">Showcase</a></li>
-            <li><a href="#contact" class="smothScroll">Contact</a></li>
-
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <% if controller_name != 'sessions' %>
-
-            <li><%= link_to "Sign Up", new_user_session_path, class: "smothscroll" %></li>
-
-
-
-  <%=  image_tag(gravatar_for("marviorocha@marviorocha.com","45"), class:"img-rounded")  %>
-
-
-            <% end %>
-
-            <ul class="nav navbar-nav pull-right">
-
-                <li class="dropdown">
-
-                    <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-
-                        User Name <span class="caret"></span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li>
-
-                            <%= link_to "Settings", edit_user_registration_path(@user) %>
-                        </li>
-                        <li role="separator" class="divider"></li>
-                        <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "smothscroll" %></li>
-
-                    </ul>
-                </li>
-            </ul>
-
-
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
+<!-- Fixed navbar -->
+<div id="navigation" class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <%= link_to "Marvo Rocha", root_path, class: "navbar-brand", id: "logo"   %>
     </div>
+    <div class="navbar-collapse collapse">
+      <ul class="nav navbar-nav">
+
+        <li class="active"> <%= link_to "Home", root_path, class: "smothscroll"   %></li>
+        <li><%= link_to "About", about_path, class: "smothscroll"   %></li>
+        <li><%= link_to "Blog", blog_path, class: "smothscroll"   %></li>
+        <li><%= link_to "Articles", articles_path %></li>
+        <li><a href="#showcase" class="smothScroll">Showcase</a></li>
+        <li><a href="#contact" class="smothScroll">Contact</a></li>
+
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+
+                <% if user_signed_in? != true %>
+                <li><%= link_to "Login", new_user_session_path, class: "smothscroll" %></li>
+                <li></li>
+                <li><%= link_to "Sign Up", new_user_registration_path, class: "smothscroll" %></li>
+                <% end %>
+
+        <% if user_signed_in? %>
+        <li><%=  image_tag(gravatar_for(current_user.email,"45"), class:"img-rounded")  %></li>
+
+        <ul class="nav navbar-nav pull-right">
+
+          <li class="dropdown">
+
+            <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+
+              User Name <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <li>
+
+                <%= link_to "Settings", edit_user_registration_path(@user) %>
+              </li>
+              <li role="separator" class="divider"></li>
+              <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "smothscroll" %></li>
+
+            </ul>
+          </li>
+        </ul>
+<% end %>
+
+      </ul>
+
+    </div><!--/.nav-collapse -->
+  </div>
+</div>
