Add paginate to blog

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -31,5 +31,8 @@
    <% end %>
 
     </table>
+    <ul class="pagination">
+    Páginas: <%= will_paginate @article %>
+    </ul>
     </div>
 </div>
