Update, create, destroy and show for categories

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -16,6 +16,7 @@
         <li class="active"> <%= link_to "Home", root_path, class: "smothscroll"   %></li>
         <li><%= link_to "About", about_path, class: "smothscroll"   %></li>
         <li><%= link_to "Blog", blog_path, class: "smothscroll"   %></li>
+        <li><%= link_to "Categories", categories_path %></li>
         <li><%= link_to "Articles", articles_path %></li>
         <li><a href="#showcase" class="smothScroll">Showcase</a></li>
         <li><a href="#contact" class="smothScroll">Contact</a></li>
